# cdoc-gen

./: CMakeLists.txt  README.md  compile_commands.json  notes.md
src/: README.md  delim.h  delim.md  main.c
src/doc/: doc.c  doc.h  doc.md  doc_c.md  doc_h.md
src/file/: file.c  file.h  file.md  file_c.md  file_h.md
src/list/: list.c  list.h  list.md  list_c.md
src/markdown/: markdown.c  markdown.h  markdown.md  markdown_c.md  markdown_h.md
src/util/: util.h  util.md  util_h.md
